// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Program Info Section renders logo when present in props 1`] = `
.c0 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  -webkit-column-gap: 1rem;
  column-gap: 1rem;
  margin-top: 5rem;
  border-top: 55px solid transparent;
  position: relative;
  -webkit-background-clip: padding-box;
  -moz-background-clip: padding;
  background-clip: padding-box;
}

.c1 {
  grid-column: 1 / span 12;
  background-color: #303641;
}

<section
  className="c0"
  data-cy="program-info-section"
  id="program-info"
>
  <div
    style={
      Object {
        "alignSelf": "end",
        "gridColumn": "1 / span 7",
      }
    }
  >
    <h2>
      Program Info
    </h2>
  </div>
  <div
    className="c1"
  >
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flex": "0.618",
            "justifyContent": "center",
            "padding": "1rem",
          }
        }
      >
        <div
          data-cy="campaign-logo"
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <div
            className=" gatsby-image-wrapper"
            style={
              Object {
                "maxHeight": null,
                "maxWidth": null,
                "overflow": "hidden",
                "position": "relative",
              }
            }
          >
            <div
              aria-hidden={true}
              style={
                Object {
                  "paddingBottom": "98.58156028368795%",
                  "width": "100%",
                }
              }
            />
            <img
              alt=""
              aria-hidden={true}
              src="data:image/png;base64,iVBOR"
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 1,
                  "position": "absolute",
                  "top": 0,
                  "transitionDelay": "500ms",
                  "width": "100%",
                }
              }
            />
            <img
              alt=""
              aria-hidden={true}
              src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'"
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 1,
                  "position": "absolute",
                  "top": 0,
                  "transitionDelay": "500ms",
                  "width": "100%",
                }
              }
            />
            <picture>
              <source
                sizes="(max-width: 141px) 100vw, 141px"
                srcSet="/static/070840eb6299020cd65fd46e27c54400/36436/aces_logo.webp 141w"
                type="image/webp"
              />
              <source
                sizes="(max-width: 141px) 100vw, 141px"
                srcSet="/static/070840eb6299020cd65fd46e27c54400/29ce4/aces_logo.png 141w"
              />
              <img
                alt="logo"
                loading="lazy"
                onLoad={[Function]}
                sizes="(max-width: 141px) 100vw, 141px"
                src="/static/070840eb6299020cd65fd46e27c54400/29ce4/aces_logo.png"
                srcSet="/static/070840eb6299020cd65fd46e27c54400/29ce4/aces_logo.png 141w"
                style={
                  Object {
                    "height": "100%",
                    "left": 0,
                    "objectFit": "cover",
                    "objectPosition": "center",
                    "opacity": 0,
                    "position": "absolute",
                    "top": 0,
                    "transition": "opacity 500ms",
                    "width": "100%",
                  }
                }
              />
            </picture>
            <noscript
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<picture><source type='image/webp' srcset=\\"/static/070840eb6299020cd65fd46e27c54400/36436/aces_logo.webp 141w\\" sizes=\\"(max-width: 141px) 100vw, 141px\\" /><source srcset=\\"/static/070840eb6299020cd65fd46e27c54400/29ce4/aces_logo.png 141w\\" sizes=\\"(max-width: 141px) 100vw, 141px\\" /><img loading=\\"lazy\\" sizes=\\"(max-width: 141px) 100vw, 141px\\" srcset=\\"/static/070840eb6299020cd65fd46e27c54400/29ce4/aces_logo.png 141w\\" src=\\"/static/070840eb6299020cd65fd46e27c54400/29ce4/aces_logo.png\\" alt=\\"logo\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
                }
              }
            />
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "display": "grid",
            "flex": "2.618",
            "gap": "1.5rem",
            "gridTemplateColumns": "minmax(0,1fr) minmax(0,1fr) minmax(0,1fr)",
            "padding": "2rem",
          }
        }
      >
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
                "fontSize": "small",
                "textTransform": "uppercase",
              }
            }
          >
            Funding Agency
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
                "fontSize": "small",
                "textTransform": "uppercase",
              }
            }
          >
            Funding Program
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
                "fontSize": "small",
                "textTransform": "uppercase",
              }
            }
          >
            Funding Program Lead
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
                "fontSize": "small",
                "textTransform": "uppercase",
              }
            }
          >
            Lead Investigator
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
                "fontSize": "small",
                "textTransform": "uppercase",
              }
            }
          >
            Data Manager / Technical Contact
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
                "fontSize": "small",
                "textTransform": "uppercase",
              }
            }
          >
            Assigned Archive Repository
          </label>
          <a
            data-cy="program-info-content-link"
            href="https://www.test-campaign.io"
            rel="noopener noreferrer"
            style={
              Object {
                "color": "#aac9ff",
              }
            }
            target="_blank"
          >
            https://www.test-campaign.io
          </a>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
                "fontSize": "small",
                "textTransform": "uppercase",
              }
            }
          >
            Partner Organization
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
                "fontSize": "small",
                "textTransform": "uppercase",
              }
            }
          >
            Tertiary Website
          </label>
          <a
            data-cy="program-info-content-link"
            href="https://www.test-campaign.io"
            rel="noopener noreferrer"
            style={
              Object {
                "color": "#aac9ff",
              }
            }
            target="_blank"
          >
            https://www.test-campaign.io
          </a>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Program Info Section renders placeholder when no logo is available 1`] = `
.c0 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  -webkit-column-gap: 1rem;
  column-gap: 1rem;
  margin-top: 5rem;
  border-top: 55px solid transparent;
  position: relative;
  -webkit-background-clip: padding-box;
  -moz-background-clip: padding;
  background-clip: padding-box;
}

.c1 {
  grid-column: 1 / span 12;
  background-color: #303641;
}

<section
  className="c0"
  data-cy="program-info-section"
  id="program-info"
>
  <div
    style={
      Object {
        "alignSelf": "end",
        "gridColumn": "1 / span 7",
      }
    }
  >
    <h2>
      Program Info
    </h2>
  </div>
  <div
    className="c1"
  >
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flex": "0.618",
            "justifyContent": "center",
            "padding": "1rem",
          }
        }
      >
        <img
          alt="placeholder-logo"
          data-cy="campaign-logo"
          src="test-file-stub"
        />
      </div>
      <div
        style={
          Object {
            "display": "grid",
            "flex": "2.618",
            "gap": "1.5rem",
            "gridTemplateColumns": "minmax(0,1fr) minmax(0,1fr) minmax(0,1fr)",
            "padding": "2rem",
          }
        }
      >
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
                "fontSize": "small",
                "textTransform": "uppercase",
              }
            }
          >
            Funding Agency
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
                "fontSize": "small",
                "textTransform": "uppercase",
              }
            }
          >
            Funding Program
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
                "fontSize": "small",
                "textTransform": "uppercase",
              }
            }
          >
            Funding Program Lead
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
                "fontSize": "small",
                "textTransform": "uppercase",
              }
            }
          >
            Lead Investigator
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
                "fontSize": "small",
                "textTransform": "uppercase",
              }
            }
          >
            Data Manager / Technical Contact
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
                "fontSize": "small",
                "textTransform": "uppercase",
              }
            }
          >
            Assigned Archive Repository
          </label>
          <a
            data-cy="program-info-content-link"
            href="https://www.test-campaign.io"
            rel="noopener noreferrer"
            style={
              Object {
                "color": "#aac9ff",
              }
            }
            target="_blank"
          >
            https://www.test-campaign.io
          </a>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
                "fontSize": "small",
                "textTransform": "uppercase",
              }
            }
          >
            Partner Organization
          </label>
          <p
            data-cy="program-info-content-text"
          >
            test string
          </p>
        </div>
        <div
          data-cy="program-info-content"
        >
          <label
            data-cy="program-info-content-label"
            style={
              Object {
                "borderBottom": "1px solid #9E9E9E",
                "color": "#9E9E9E",
                "display": "block",
                "fontSize": "small",
                "textTransform": "uppercase",
              }
            }
          >
            Tertiary Website
          </label>
          <a
            data-cy="program-info-content-link"
            href="https://www.test-campaign.io"
            rel="noopener noreferrer"
            style={
              Object {
                "color": "#aac9ff",
              }
            }
            target="_blank"
          >
            https://www.test-campaign.io
          </a>
        </div>
      </div>
    </div>
  </div>
</section>
`;
